2011-04-05  Eric Botcazou  <ebotcazou@adacore.com>

	* stor-layout.c (self_referential_size): Fix 2010-07-13 commit.

2011-04-01  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/t-spu-elf (dp-bit.c): Use > instead of >>.

2011-04-01  Andrey Belevantsev  <abel@ispras.ru>
	
	Backport from mainline
	2011-03-22  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/48143
	* config/i386/sse.md (*sse2_cvtpd2dq): Add athlon_decode attribute.
	(*sse2_cvttpd2dq, sse2_cvtss2sd, *sse2_cvtpd2ps,
	sse2_cvtps2pd): Likewise.

2011-03-31  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/48142
	* config/i386/i386.c (ix86_adjust_stack_and_probe): Differentiate
	frame-related from frame-unrelated adjustments to the stack pointer.

2011-03-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-03-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/48349
	* config/i386/i386.h (REG_CLASS_CONTENTS): Fix a typo in
	FLOAT_SSE_REGS.

2011-03-29  Jakub Jelinek  <jakub@redhat.com>

	PR debug/48253
	* dwarf2out.c (struct dw_fde_struct): Remove dw_fde_hot_section_label,
	dw_fde_hot_section_end_label, dw_fde_unlikely_section_label,
	dw_fde_unlikely_section_end_label, cold_in_std_section,
	dw_fde_switched_sections and dw_fde_switched_cold_to_hot fields.
	Add dw_fde_second_begin, dw_fde_second_end and second_in_std_section
	fields.
	(output_fde): Use dw_fde_second_{begin,end} if second is
	true, otherwise dw_fde_{begin,end}.
	(output_call_frame_info): Test dw_fde_second_begin != NULL
	instead of dw_fde_switched_sections.
	(dwarf2out_begin_prologue): Stop initializing removed dw_fde_struct
	fields, initialize new fields.  Initialize in_std_section
	unconditionally from the first partition.
	(dwarf2out_end_epilogue): Don't override dw_fde_end when
	dw_fde_second_begin is non-NULL.
	(dwarf2out_switch_text_section): Stop initializing removed
	dw_fde_struct fields, initialize new fields, initialize
	also dw_fde_end here.  Set dw_fde_switch_cfi even when